--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,9 @@ body {
 .profile-info {
 	margin-left: 10px;
 	text-align: left;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 .profile-img {
 	width: 150px;
@@ -33,4 +36,35 @@ body {
 .profile-followers,
 .profile-genres {
 	font-size: 16px;
+}
+
+/*Gallery Styles*/
+
+.track {
+	display: inline-block;
+	width: 220px;
+	height: 220px;
+	margin: 10px;
+	text-align: left;
+	cursor: pointer;
+	position: relative;
+}
+.track-img {
+	width: 220px;
+	height: 220px;
+	border: solid 3px #e0e0e0;
+	border-radius: 3px;
+	object-fit: cover;
+	position: absolute;
+}
+.track-title {
+	background-color: #000;
+	color: #fff;
+	opacity: .75;
+	width: 214px;
+	margin-left: 3px;
+	text-align: center;
+	position: absolute;
+	bottom: 0;
+	padding: 10px;
 }
