Artist Top tracks are playable (play/pause controls).

--- a/src/App.css
+++ b/src/App.css
@@ -68,3 +68,27 @@ body {
 	bottom: 0;
 	padding: 10px;
 }
+.track-play {
+	position: absolute;
+	width: 220px;
+	height: 220px;
+}
+.track-play-inner {
+	position: absolute;
+	top: 80px;
+	text-align: center;
+	font-size: 25px;
+	background-color: #000;
+	border-radius: 30px;
+	width: 60px;
+	height: 60px;
+	color: #fff;
+	padding-top: 13px;
+	margin-left: 80px;
+	margin-right: 80px;
+	opacity: 0;
+	transition: opacity .3s ease-in;
+}
+.track-play-inner:hover {
+	opacity: .8;
+}
